# textadept-discord-rpc

./: .gitignore  .gitmodules  .lua-format  CMakeLists.txt  LICENSE  README.md  init.lua  names.lua  ta_rpc.c  xmake.lua
